# TheAgentMonorepo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md
.github/workflows/: ci.yml
agents/: README.md
agents/antigravity/: brief.md
agents/codex/: brief.md
agents/gpg-gen/: brief.md
agents/media-auth/: brief.md
apps/fullstack/example/: .env.example  README.md
apps/gpg-gen/: Makefile  README.md  generate.sh  pyproject.toml  test_generate.py
apps/media-auth/: Makefile  README.md  pyproject.toml  requirements.txt
apps/media-auth/media_auth/: __init__.py  cli.py  core.py  web.py
apps/media-auth/media_auth/static/css/: styles.css
apps/media-auth/media_auth/templates/: index.html
apps/media-auth/tests/: conftest.py  test_cli.py  test_core.py  test_web.py
apps/nextjs/example/: .env.example  README.md
apps/python/example/: README.md
scripts/: create-fullstack-app.sh  create-nextjs-app.sh  create-python-app.sh  lint-all.sh  test-all.sh
